--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
               value: Stare at circle for 3 sec for next scene"
       ></a-entity>
       
-      <a-sky src="sky/interviews-medium.jpg"></a-sky>
+      <a-sky src="sky/interviews-low.jpg"></a-sky>
     </a-scene>
   </body>
 </html>
