--- a/index3.html
+++ b/index3.html
@@ -42,7 +42,7 @@
               value: Stare at circle for 3 sec to restart"
       ></a-entity>
       
-      <a-sky src="sky/huey-medium.mp4"></a-sky>
+      <a-sky src="sky/huey-low.mp4"></a-sky>
     </a-scene>
   </body>
 </html>
